@@ -8,6 +8,7 @@
 	* HilbertArray.measure()
 	* HilbertArray.logm()
 	* circuits.swap()
+	* remove deprecated 'q' param for expm
 
 === qitensor-0.9 (Dan Stahlke, 2011-04-17) ===
 	* random_isometry
